--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ucf20.github.io/My-Reads-Project",
   "name": "nd0191-myreads-starter",
   "version": "0.1.0",
   "private": true,
